# hyperliquid-autotrader

./: .env.example  .gitignore  README.md  REPO_CREATION_REPORT.md  START_HERE.md  pyproject.toml
.github/workflows/: ci.yml
agents/: DATA_ENGINEER.md  EXECUTION_ENGINEER.md  MASTER.md  QUANT_RESEARCHER.md  RISK_AUDITOR.md  SRE_MONITORING.md
artifacts/baselines/: current.json
config/: base.yaml  canary.yaml  live.yaml  paper.yaml  secrets.schema.md
docs/: ARCHITECTURE.md  BACKTEST_METHODOLOGY.md  DATA_MODEL.md  GOVERNANCE.md  PRD.md  REFERENCES.md  RISK_GUARDRAILS.md  RUNBOOK.md  STRATEGY_LIBRARY.md
infra/: docker-compose.yml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
scripts/: bootstrap_history.py  healthcheck.py  live_trade.py  paper_trade.py  promote_candidate.py  rollback.py  run_backtest.py  run_walkforward.py
src/autotrader/: __init__.py  main.py
src/autotrader/backtest/: __init__.py  cost_model.py  engine.py  metrics.py  reporting.py  robustness.py  walkforward.py
src/autotrader/data/: __init__.py
src/autotrader/execution/: __init__.py  broker.py  order_manager.py  reconciliation.py  slippage.py  tp_manager.py
src/autotrader/features/: __init__.py  microstructure.py  positioning.py  technical.py
src/autotrader/governance/: __init__.py  approvals.py  drift.py  gates.py  probation.py  registry.py
src/autotrader/hl/: __init__.py  client.py  nonces.py  rate_limiter.py  types.py  ws.py
src/autotrader/levels/: detector.py
src/autotrader/ml/: features.py  labeler.py  model.py  paper_sim.py  trainer.py
src/autotrader/monitoring/: __init__.py  alerts.py  dashboards.py  logger.py  metrics.py  web.py
src/autotrader/news/: fetcher.py  guard.py
tests/integration/: test_hl_info_smoke.py  test_ws_subscriptions.py
tests/unit/: test_config_load.py  test_imports_smoke.py  test_levels_detector.py  test_ml_features.py  test_ml_labeler.py  test_ml_model.py  test_news_guard.py  test_nonces.py  test_rate_limiter.py  test_regime_classifier.py  test_risk_constraints.py  test_risk_hedging.py  test_strategy_invariants.py  test_tp_manager.py
(+41 files in other folders)
