[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperliquid-autotrader"
version = "0.0.1"
description = "Hyperliquid autonomous trader with regime detection and risk guardrails"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hyperliquid-python-sdk>=0.9.0",
    "httpx[http2]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.7.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "asyncpg>=0.29.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "scipy>=1.13.0",
    "aiofiles>=23.2.1",
    "tenacity>=8.3.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "msgpack>=1.0.8",
    "aiohttp>=3.13.4",
    # ML signal quality model
    "lightgbm>=4.3.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.4.0",
    # News + sentiment
    "feedparser>=6.0.11",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff",
    "black",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
    "hypothesis>=6.100.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
